--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: My Personal CTF Wiki
 description: My Personal CTF Wiki
-author: nullorzero
+author: null||zero
 github: https://github.com/nullorzerosec
-about: I am a Computer Science student. Currently doing more in Sec, focused in Python and C. In love with fuzzing and pentesting.
+about: I am a Computer Science student. Currently doing more in Sec, focused in Python and C. Fuzzing is magic and pentesting ist art.
 #disqus_shortname: mypersonalCTFwiki
 #look into default pages for google analytics
 #google_analytics:  #https
@@ -30,7 +30,7 @@ social:
       link: "https://github.com/nullorzerosec"
 
 share:
-  twitter_username: "nullorzero"
+  twitter_username: "null||zero"
 
 urls:
     - text: About Me
