--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: My Personal CTF Wiki
 description: My Personal CTF Wiki
 author: null||zero
 github: https://github.com/nullorzerosec
-about: I am a Computer Science student. Currently doing more in Sec, focused in Python and C. Fuzzing is magic and pentesting ist art.
+about: I am a Computer Science student. Currently doing more in Sec, focused in Python and C.
 #disqus_shortname: mypersonalCTFwiki
 #look into default pages for google analytics
 #google_analytics:  #https
