--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: My Personal CTF Wiki
-description: My Personal CTF Wiki
+title: My Personal IT-Sec Wiki
+description: My Personal IT-Sec Wiki
 author: null||zero
 github: https://github.com/nullorzerosec
 about: I am a Computer Science student. Currently doing more in Sec, focused in Python and C.
