--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: My Personal IT-Sec Wiki
-description: My Personal IT-Sec Wiki
-author: null||zero
+description: My IT-Sec Wiki
+author: kyel1x
 github: https://github.com/nullorzerosec
 about: I am a Computer Science student. Currently doing more in Sec, focused in Python and C.
 #disqus_shortname: mypersonalCTFwiki
@@ -21,7 +21,7 @@ social:
 #    - icon: fa-facebook
 #      link: "#"
     - icon: fa-twitter
-      link: "https://twitter.com/nullorzerosec"
+      link: "https://twitter.com/kyel1x"
 #    - icon: fa-linkedin
 #      link: ""
 #    - icon: fa-stack-exchange
@@ -30,7 +30,7 @@ social:
       link: "https://github.com/nullorzerosec"
 
 share:
-  twitter_username: "null||zero"
+  twitter_username: "kyel1x"
 
 urls:
     - text: About Me
