--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: My Personal IT-Sec Wiki
+title: My IT-Sec Wiki
 description: My IT-Sec Wiki
 author: kyel1x
 github: https://github.com/nullorzerosec
-about: I am a Computer Science student. Currently doing more in Sec, focused in Python and C.
+about: Security research & CTF.
 #disqus_shortname: mypersonalCTFwiki
 #look into default pages for google analytics
 #google_analytics:  #https
