--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ about: Security research & CTF.
 #look into default pages for google analytics
 #google_analytics:  #https
 
-avatar_url: /static/img/privateinvestocat.jpg
+avatar_url: /static/img/dm.jpg
 
 enableTags: true
 tagarray: []
